--- a/PKA_MID_BOSS1.html
+++ b/PKA_MID_BOSS1.html
@@ -17,104 +17,165 @@
 </style>
 </head>
 <body>
-<h1>VS 보니</h1>
+<h1>VS 보아 행콕</h1>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 100+</h2>
+<h3>Stage 1:</h3>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">1턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
+<br>
+<h3>Stage 2:</h3>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_icon_hungry.png">2개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 99% 감소</div>
+<br>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">상단, 하단의 필살기 턴을 2턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">중간단의 필살기 턴을 4턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">1개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_wa.png">2턴 동안 슬롯 배리어([和] 슬롯 2회)</div>
 <br>
 <h3>Stage 4:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: Dr. 베가펑크</span><br>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">99턴 동안 상태이상 무효</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 100000배</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">6턴 동안 남은 체력 1로 버티기 효과</div>
+<span class="label-preemptive" style="color:#87cefa">선제 행동: 우측 상단이 힘 속성, 기 속성, 속 속성 캐릭터일 때</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 2턴 되돌리기</div>
+<div class="icon-line"><img src="img/popuptext_slot_bomb.png">좌측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">우측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<span class="label-preemptive" style="color:#87cefa">선제 행동: 우측 상단이 심 속성, 지 속성 캐릭터일 때</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_palsy.png">7턴 동안 마비</div>
+<div class="icon-line"><img src="img/popuptext_slot_bomb.png">좌측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">우측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 쥬얼리 보니</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 보아 행콕</span><br>
+<div class="icon-line"><img src="img/common_icon_210.png">피해 데미지 증가 이외의 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_weak_03.png">약점 타입: 타격형</div>
+<span class="label-preemptive" style="color:#87cefa">선제 행동: 우측 상단이 힘 속성, 기 속성, 속 속성 캐릭터일 때</span><br>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_color_change.png">심 속성, 지 속성 변화(2개 이상일 경우 랜덤 변화)</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">6턴 동안 공격력 99% 감소</div>
-<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 90% 감소</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">5턴 동안 [고기] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/common_palsy.png">12턴 동안 마비</div>
+<div class="icon-line"><img src="img/popuptext_slot_superobstacle.png">우측 상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [초 방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_megabomb.png">우측 중간단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [강화 폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_blank.png">우측 하단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [공백] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">좌측 상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">좌측 중간단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_poison.png">좌측 하단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [독] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">2턴 동안 필살기 사용 횟수 2회 제한</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">3턴 동안 체인 계수가 2.75 이하일 경우 공격력 90% 감소</div>
+<span class="label-preemptive" style="color:#87cefa">선제 행동: 우측 상단이 심 속성, 지 속성 캐릭터일 때</span><br>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
+<div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">5턴 동안 [고기] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_superobstacle.png">우측 상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [초 방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_megabomb.png">우측 중간단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [강화 폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_blank.png">우측 하단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [공백] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">좌측 상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">좌측 중간단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_poison.png">좌측 하단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [독] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">12턴 동안 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">2턴 동안 필살기 사용 횟수 2회 제한</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">3턴 동안 체인 계수가 2.75 이하일 경우 공격력 90% 감소</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 1-59</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">2턴 동안 10000을(를) 넘는 데미지를 99% 감소</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_special_bind.png">2턴 동안 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">2턴 동안 받는 데미지를 60% 감소</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 쥬얼리 보니</span><br>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 보아 행콕</span><br>
+<div class="icon-line"><img src="img/common_weak_03.png">약점 타입: 타격형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">2턴 동안 받는 데미지를 70% 감소</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">2턴 동안 50000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">2턴 동안 체인 계수가 2.0 이하일 경우 공격력 50% 감소</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">2턴 동안 [고기] 슬롯으로 공격했을 때 데미지 50% 감소</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 60-79</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 2턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 7500을(를) 넘는 데미지를 99% 감소</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_special_bind.png">3턴 동안 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">3턴 동안 방어력 3000배</div>
+<div class="icon-line"><img src="img/popuptext_slot_bomb.png">좌측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">우측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">3턴 동안 받는 데미지를 75% 감소</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 쥬얼리 보니</span><br>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 보아 행콕</span><br>
+<div class="icon-line"><img src="img/common_weak_03.png">약점 타입: 타격형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">3턴 동안 받는 데미지를 80% 감소</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 10000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">4턴 동안 체인 계수가 2.5 이하일 경우 공격력 70% 감소</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">4턴 동안 [고기] 슬롯으로 공격했을 때 데미지 70% 감소</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 80-99</h2>
+<h3>Stage 1:</h3>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">1턴 동안 5000을(를) 넘는 데미지를 99% 감소</div>
+<br>
+<h3>Stage 2:</h3>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_icon_hungry.png">1개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 10% 감소, 공격력 90% 감소</div>
+<br>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 2턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">1개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 10% 감소, 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">5턴 동안 5000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_wa.png">1턴 동안 슬롯 배리어([和] 슬롯 2회)</div>
 <br>
 <h3>Stage 4:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: Dr. 베가펑크</span><br>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">99턴 동안 상태이상 무효</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_special_bind.png">5턴 동안 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">5턴 동안 방어력 50000배</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">5턴 동안 남은 체력 1로 버티기 효과</div>
+<span class="label-preemptive" style="color:#87cefa">선제 행동: 우측 상단이 힘 속성, 기 속성, 속 속성 캐릭터일 때</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">5턴 동안 받는 데미지를 80% 감소</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
+<div class="icon-line"><img src="img/popuptext_slot_bomb.png">좌측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">우측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<span class="label-preemptive" style="color:#87cefa">선제 행동: 우측 상단이 심 속성, 지 속성 캐릭터일 때</span><br>
+<div class="icon-line"><img src="img/common_palsy.png">6턴 동안 마비</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">5턴 동안 받는 데미지를 80% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_bomb.png">좌측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">우측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 쥬얼리 보니</span><br>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">99턴 동안 상태이상 무효</div>
-<div class="icon-line"><img src="img/common_icon_death_invalid.png">99턴 동안격파(전투 불능)계의 필살기 무효</div>
-<div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">99턴 동안비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">5턴 동안 공격력 99% 감소</div>
-<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">5턴 동안 받는 데미지를 90% 감소</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">5턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 보아 행콕</span><br>
+<div class="icon-line"><img src="img/common_icon_210.png">99턴 동안 피해 데미지 증가 이외의 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_weak_03.png">약점 타입: 타격형</div>
+<span class="label-preemptive" style="color:#87cefa">선제 행동: 우측 상단이 힘 속성, 기 속성, 속 속성 캐릭터일 때</span><br>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_death_invalid.png">98턴 동안격파(전투 불능)계의 필살기 무효</div>
+<div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">98턴 동안비율 데미지 내성 100%</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">5턴 동안 [고기] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/common_palsy.png">6턴 동안 마비</div>
+<div class="icon-line"><img src="img/popuptext_slot_superobstacle.png">우측 상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [초 방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_megabomb.png">우측 중간단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [강화 폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_blank.png">우측 하단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [공백] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">좌측 상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">좌측 중간단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_poison.png">좌측 하단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [독] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">2턴 동안 필살기 사용 횟수 2회 제한</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">3턴 동안 체인 계수가 2.5 이하일 경우 공격력 90% 감소</div>
+<span class="label-preemptive" style="color:#87cefa">선제 행동: 우측 상단이 심 속성, 지 속성 캐릭터일 때</span><br>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_death_invalid.png">98턴 동안격파(전투 불능)계의 필살기 무효</div>
+<div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">98턴 동안비율 데미지 내성 100%</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">5턴 동안 [고기] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_superobstacle.png">우측 상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [초 방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_megabomb.png">우측 중간단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [강화 폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_blank.png">우측 하단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [공백] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">좌측 상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">좌측 중간단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_poison.png">좌측 하단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [독] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">8턴 동안 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">2턴 동안 필살기 사용 횟수 2회 제한</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">3턴 동안 체인 계수가 2.5 이하일 경우 공격력 90% 감소</div>
 <br>
 </body></html>
