--- a/PKA_BOSS.html
+++ b/PKA_BOSS.html
@@ -17,106 +17,149 @@
 </style>
 </head>
 <body>
-<h1>VS 링링</h1>
+<h1>VS 키자루</h1>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 100+</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">9턴 동안 상단 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_skill_limit.png">3턴 동안 필살기 사용 횟수 1회 제한</div>
-<div class="icon-line"><img src="img/common_despair.png">9턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">중간단의 필살기 턴을 5턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_blow.png">4턴 동안 하단을(를) 날려버리기</div>
 <br>
 <h3>Stage 4:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 로저&레일리&가반</span><br>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_02.png">99턴 동안 독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard.png">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">12턴 동안 선원 봉쇄</div>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">3개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/common_despair.png">9턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line"><img src="img/common_stun.png">하단은(는) 받는 데미지 1.5배의 기절</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">6턴 동안 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 방어력 감소 이외의 상태이상 무효</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 키자루</span><br>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">11턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">7턴 동안 방어력 10000배</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_g.png">4턴 동안 슬롯 배리어([G] 슬롯 1회)</div>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<div class="icon-line"><img src="img/state_icon_invincible.png">3턴 동안 받는 데미지 무효</div>
+<div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
+<span class="label-preemptive" style="color:#87cefa">선제 행동: 일당의 체력이 50% 이하일 때</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
+<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_silence.png">3턴 동안 우측 상단 침묵</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">좌측 상단의 필살기 턴을 5턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">6턴 동안 11230 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 90% 감소</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_bind.png">10턴 동안 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_251_skill.png">5턴 동안 21500 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line"><img src="img/common_icon_235_skill.png">5턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 15559을(를) 받는다</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">5턴 동안 [힘][기][속][심][지][和][고기][연] 슬롯으로 공격했을 때 데미지 70% 감소</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
+<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_silence.png">3턴 동안 우측 상단 침묵</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">좌측 상단의 필살기 턴을 5턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">6턴 동안 11230 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 90% 감소</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_damage.png">112300 데미지</div>
+<span class="label-after1turn">적의 체력에 따라 속성이 변화:</span><br>
+<div class="icon-line"><img src="img/filter_attribute_intellect.png">키자루: 남은 HP가 100% 이하일 때</div>
+<div class="icon-line"><img src="img/filter_attribute_power.png">키자루: 남은 HP가 50% 이하일 때</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 1-59</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">2턴 동안 상단 봉쇄</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">중간단의 필살기 턴을 1턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_blow.png">1턴 동안 하단을(를) 날려버리기</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">2턴 동안 선원 봉쇄</div>
+<div class="icon-line"><img src="img/common_despair.png">2턴 동안 상단의 선장효과 무효</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 키자루</span><br>
+<div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">2턴 동안 10000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_bind.png">2턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">2턴 동안 3000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<span class="label-after1turn">적의 체력에 따라 속성이 변화:</span><br>
+<div class="icon-line"><img src="img/filter_attribute_intellect.png">키자루: 남은 HP가 100% 이하일 때</div>
+<div class="icon-line"><img src="img/filter_attribute_power.png">키자루: 남은 HP가 50% 이하일 때</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 60-79</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">4턴 동안 상단 봉쇄</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">중간단의 필살기 턴을 2턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_blow.png">2턴 동안 하단을(를) 날려버리기</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">4턴 동안 선원 봉쇄</div>
+<div class="icon-line"><img src="img/common_despair.png">4턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 50% 감소</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 키자루</span><br>
+<div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_251_skill.png">2턴 동안 5000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 5000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line"><img src="img/common_bind.png">3턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">3턴 동안 5000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<span class="label-after1turn">적의 체력에 따라 속성이 변화:</span><br>
+<div class="icon-line"><img src="img/filter_attribute_intellect.png">키자루: 남은 HP가 100% 이하일 때</div>
+<div class="icon-line"><img src="img/filter_attribute_power.png">키자루: 남은 HP가 50% 이하일 때</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 80-99</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">8턴 동안 상단 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_skill_limit.png">3턴 동안 필살기 사용 횟수 1회 제한</div>
-<div class="icon-line"><img src="img/common_despair.png">8턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">중간단의 필살기 턴을 4턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_blow.png">4턴 동안 하단을(를) 날려버리기</div>
 <br>
 <h3>Stage 4:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 로저&레일리&가반</span><br>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_02.png">99턴 동안 독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard.png">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">10턴 동안 선원 봉쇄</div>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">2개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 15% 감소, 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/common_despair.png">8턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">5턴 동안 공격력 70% 감소</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">5턴 동안 3000을(를) 넘는 데미지를 90% 감소</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_210.png">99턴 동안 적의 방어력 감소 이외의 상태이상 무효</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 키자루</span><br>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">99턴 동안격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">99턴 동안비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">9턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 5000배</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_g.png">3턴 동안 슬롯 배리어([G] 슬롯 1회)</div>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<div class="icon-line"><img src="img/state_icon_invincible.png">2턴 동안 받는 데미지 무효</div>
+<div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
+<span class="label-preemptive" style="color:#87cefa">선제 행동: 일당의 체력이 50% 이하일 때</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_silence.png">1턴 동안 우측 상단 침묵</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">좌측 상단의 필살기 턴을 3턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">5턴 동안 11230 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">5턴 동안 받는 데미지를 90% 감소</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_bind.png">8턴 동안 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_251_skill.png">5턴 동안 13000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line"><img src="img/common_icon_235_skill.png">3턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 11000을(를) 받는다</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 [힘][기][속][심][지][和][고기][연] 슬롯으로 공격했을 때 데미지 50% 감소</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_silence.png">1턴 동안 우측 상단 침묵</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">좌측 상단의 필살기 턴을 3턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">5턴 동안 11230 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">5턴 동안 받는 데미지를 90% 감소</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_damage.png">80000 데미지</div>
+<span class="label-after1turn">적의 체력에 따라 속성이 변화:</span><br>
+<div class="icon-line"><img src="img/filter_attribute_intellect.png">키자루: 남은 HP가 100% 이하일 때</div>
+<div class="icon-line"><img src="img/filter_attribute_power.png">키자루: 남은 HP가 50% 이하일 때</div>
 <br>
 </body></html>
