--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="PKA.html">
         <img src="img/common_PKA_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-08-27 12:00 ~ <br>2025-09-28 22:59<br>⚪ 예정</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-08-27 12:00 ~ <br>2025-09-28 22:59<br>🟢 개최 중</div>
     </div>
     
     <div>
@@ -27,6 +27,6 @@
     </div>
 
   </div>
-  <footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-08-25</footer>
+  <footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-09-12</footer>
 </body>
 </html>
