--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <a href="TM.html">
         <img src="img/common_TM_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-08-13 18:00 ~ <br>2025-08-17 22:59<br>🔴 종료</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-09-17 18:00 ~ <br>2025-09-21 22:59<br>⚪ 예정</div>
     </div>
     
     <div>
