--- a/TM_GL_full.html
+++ b/TM_GL_full.html
@@ -208,12 +208,13 @@
 <div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 5000을(를) 넘는 데미지를 90% 감소</div>
 <div class="icon-line"><img src="img/common_damage.png">10000 데미지</div>
 <div class="icon-line"><img src="img/quest_combo_barrier_rainbow.png">2턴 동안 슬롯 배리어([무지개] 슬롯 3회)</div>
-<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">5턴 동안 일반 공격으로 받는 데미지가 99% 감소</div>
+<div class="icon-line"><img src="img/common_icon_266_skill.png">5턴 동안 일반 공격으로 받는 데미지가 99% 감소</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 데미지</span><br>
 <div class="icon-line">1회까지</div>
 <div class="icon-line"><img src="img/common_damage.png">30000 데미지</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
 <div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 70% 감소</div>
+<div class="icon-line"><img src="img/common_damage.png">배리어, 일반 공격으로 받는 데미지 감소 해제</div>
 <div class="icon-line"><img src="img/common_color_change.png">기 속성 변화(2개 이상일 경우 랜덤 변화)</div>
 <span class="label-death">격파 시 행동:</span><br>
 <div class="icon-line"><img src="img/common_damage.png">40000 데미지</div>
