--- a/KIZUNA_BOSS2.html
+++ b/KIZUNA_BOSS2.html
@@ -17,105 +17,67 @@
 </style>
 </head>
 <body>
-       <h1>VS 볼사리노</h1>
-       <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#e79925; font-weight:bold;">일반보스</span> <span style="color:#e79925; font-weight:bold;">[심]</span></div>
+       <h1>VS 나미&우솝</h1>
+       <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#7515A1; font-weight:bold;">일반보스</span> <span style="color:#7515A1; font-weight:bold;">[지]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_charge.png">격투형, 자유형, 박식형 캐릭터의 필살기 턴을 15턴 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">격투형, 자유형, 박식형 캐릭터의 슈퍼 체인지 효과를 15 단축</div>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">격투형, 자유형, 박식형 캐릭터의 VS 효과의 게이지를 15 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">격투형, 참격형, 강인형 캐릭터의 필살기 턴을 15턴 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">격투형, 참격형, 강인형 캐릭터의 슈퍼 체인지 효과를 15 단축</div>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">격투형, 참격형, 강인형 캐릭터의 VS 효과의 게이지를 15 단축</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 2:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">4개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">3턴 동안 체인 계수가 3.0 이하일 경우 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 [고기] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_bomb.png">좌측의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">우측 상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">4턴 동안 [힘][기][심][지][和][연] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_bomb.png">3턴 동안 슬롯 배리어([폭탄] 슬롯 1회)</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv1~Lv20의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 볼사리노</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 나미&우솝</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
+<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">4턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">3턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 일당의 공격력 상승)</div>
-<div class="icon-line"><img src="img/common_despair.png">4턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">4턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
-<div class="icon-line"><img src="img/common_icon_251_skill.png">7턴 동안 20000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
-<div class="icon-line">1회까지</div>
-<div class="icon-line"><img src="img/common_icon_tap_countlimit.png">4턴 동안 탭 횟수 제한 4회</div>
-<div class="icon-line"><img src="img/common_slot_bind.png">2턴 동안 선원의 슬롯 봉쇄</div>
-<span class="label-death">격파 시 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">10턴 동안 선원, 좌측 상단 봉쇄</div>
-<div class="icon-line"><img src="img/common_heal.png">고정 회복 1000000</div>
-<span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
-<div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 선원 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">선원의 필살기 턴을 2턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_icon_hungry.png">2개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 30% 감소, 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">선원의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_guts_icon.png">6턴 동안 남은 체력 1로 버티기 효과</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv21~Lv30의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 볼사리노</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 나미&우솝</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
+<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/quest_combo_barrier_meat.png">3턴 동안 슬롯 배리어([고기] 슬롯 3회)</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">4턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">3턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 일당의 공격력 상승)</div>
-<div class="icon-line"><img src="img/common_despair.png">4턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">4턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
-<div class="icon-line"><img src="img/common_icon_251_skill.png">12턴 동안 20000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
-<div class="icon-line">1회까지</div>
-<div class="icon-line"><img src="img/common_icon_tap_countlimit.png">4턴 동안 탭 횟수 제한 4회</div>
-<div class="icon-line"><img src="img/common_slot_bind.png">2턴 동안 선원의 슬롯 봉쇄</div>
-<span class="label-death">격파 시 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">10턴 동안 선원, 좌측 상단 봉쇄</div>
-<div class="icon-line"><img src="img/common_heal.png">고정 회복 1000000</div>
-<div class="icon-line">배리어 해제</div>
-<span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
-<div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 선원 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">선원의 필살기 턴을 2턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_icon_hungry.png">2개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 30% 감소, 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">선원의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">6턴 동안 체인 계수가 2.5 이하일 경우 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">3턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
+<div class="icon-line"><img src="img/common_guts_icon.png">6턴 동안 남은 체력 1로 버티기 효과</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 90% 감소</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv31~의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 볼사리노</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 나미&우솝</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
+<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/quest_combo_barrier_meat.png">3턴 동안 슬롯 배리어([고기] 슬롯 3회)</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">7턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">3턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 일당의 공격력 상승)</div>
-<div class="icon-line"><img src="img/common_despair.png">4턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">6턴 동안 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">4턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
-<div class="icon-line"><img src="img/common_icon_251_skill.png">12턴 동안 20000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
-<div class="icon-line">1회까지</div>
-<div class="icon-line"><img src="img/common_icon_tap_countlimit.png">4턴 동안 탭 횟수 제한 4회</div>
-<div class="icon-line"><img src="img/common_slot_bind.png">2턴 동안 선원의 슬롯 봉쇄</div>
-<span class="label-death">격파 시 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">10턴 동안 선원, 좌측 상단 봉쇄</div>
-<div class="icon-line"><img src="img/common_heal.png">고정 회복 1000000</div>
-<div class="icon-line">배리어 해제</div>
-<span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
-<div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 선원 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">선원의 필살기 턴을 2턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_icon_hungry.png">2개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 30% 감소, 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">선원의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_burn.png">3턴 동안 20000 데미지의 화상</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">6턴 동안 체인 계수가 2.5 이하일 경우 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/common_stun.png">중간단은(는) 받는 데미지 3배의 기절</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">3턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
+<div class="icon-line"><img src="img/common_guts_icon.png">6턴 동안 남은 체력 1로 버티기 효과</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 90% 감소</div>
 <br>
 </body></html>
