--- a/PKA.html
+++ b/PKA.html
@@ -19,8 +19,8 @@
 
 <iframe src="PKA_BOSS.html" width="100%" height="90%" style="border:none;"></iframe>
 <ul>
-  <li><a href='PKA_MID_BOSS2.html' style='font-size:24px'>VS 링링</a></li><li><a href='PKA_MID_BOSS1.html' style='font-size:24px'>VS 보아 행콕</a></li>
+  <li><a href='PKA_MID_BOSS2.html' style='font-size:24px'>VS 키자루</a></li><li><a href='PKA_MID_BOSS1.html' style='font-size:24px'>VS 링링</a></li>
 </ul>
-<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-09-19</footer>
+<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-09-25</footer>
 </body>
 </html>
