--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
       <a href="TM.html">
         <img src="img/common_TM_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-09-17 18:00 ~ <br>2025-09-21 22:59<br>🟢 개최 중</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-09-17 18:00 ~ <br>2025-09-21 22:59<br>🔴 종료</div>
     </div>
     
     <div>
       <a href="PKA.html">
         <img src="img/common_PKA_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-08-27 12:00 ~ <br>2025-09-28 22:59<br>🟢 개최 중</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-09-29 12:00 ~ <br>2025-10-26 22:59<br>⚪ 예정</div>
     </div>
     
     <div>
       <a href="KIZUNA.html">
         <img src="img/common_KIZUNA_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-09-24 12:00 ~ <br>2025-09-28 22:59<br>⚪ 예정</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-09-24 12:00 ~ <br>2025-09-28 22:59<br>🟢 개최 중</div>
     </div>
 
   </div>
-  <footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-09-19</footer>
+  <footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-09-25</footer>
 </body>
 </html>
