--- a/KIZUNA.html
+++ b/KIZUNA.html
@@ -16,10 +16,21 @@
   </a>
 </div>
 
+<div id="__dl_btn__" style="
+  position: fixed; top: 14px; right: 14px; z-index: 9999;
+  display: flex; gap: 8px; align-items: center;">
+  <a href="KIZUNA.png" download="KIZUNA.png" style="
+     background:#ffd54f; color:#222; font-weight:700; text-decoration:none;
+     border-radius:10px; padding:10px 14px; box-shadow:0 2px 8px rgba(0,0,0,.25);
+     font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Pretendard,sans-serif;">
+     ⬇ PNG 다운로드
+  </a>
+</div>
+
 <h1>유대결전 패턴</h1>
 <ul>
 <li><a href='KIZUNA_BOSS1.html' style='font-size:28px !important'>[일반보스] [기] VS 검은 수염</a></li>
 <li><a href='KIZUNA_BOSS2.html' style='font-size:28px !important'>[일반보스] [심] VS 검은 수염</a></li>
 </ul>
-<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-06</footer>
+<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-07</footer>
 </body></html>
