--- a/KIZUNA_BOSS1.html
+++ b/KIZUNA_BOSS1.html
@@ -110,4 +110,15 @@
 <span class="label-death">격파 시 행동:</span><br>
 <div class="icon-line"><img src="img/common_damage.png">108383 데미지</div>
 <br>
+
+<div id="__dl_btn__" style="
+  position: fixed; top: 14px; right: 14px; z-index: 9999;
+  display: flex; gap: 8px; align-items: center;">
+  <a href="KIZUNA_BOSS1.png" download="KIZUNA_BOSS1.png" style="
+     background:#ffd54f; color:#222; font-weight:700; text-decoration:none;
+     border-radius:10px; padding:10px 14px; box-shadow:0 2px 8px rgba(0,0,0,.25);
+     font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Pretendard,sans-serif;">
+     ⬇ PNG 다운로드
+  </a>
+</div>
 </body></html>
