--- a/TM.html
+++ b/TM.html
@@ -18,11 +18,23 @@
   </a>
 </div>
 
+
+<div id="__dl_btn__" style="
+  position: fixed; top: 14px; right: 14px; z-index: 9999;
+  display: flex; gap: 8px; align-items: center;">
+  <a href="TM.png" download="TM.png" style="
+     background:#ffd54f; color:#222; font-weight:700; text-decoration:none;
+     border-radius:10px; padding:10px 14px; box-shadow:0 2px 8px rgba(0,0,0,.25);
+     font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Pretendard,sans-serif;">
+     ⬇ PNG 다운로드
+  </a>
+</div>
+
 <iframe src="TM_NW_full.html" width="100%" height="90%" style="border:none;"></iframe>
 <ul>
   <li><a href="TM_GL_full.html">위대한 항로</a></li>
   <li><a href="TM_EB_full.html">통통배</a></li>
 </ul>
-<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-06</footer>
+<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-07</footer>
 </body>
 </html>
