--- a/PKA_BOSS.html
+++ b/PKA_BOSS.html
@@ -136,4 +136,15 @@
 <div class="icon-line"><img src="img/common_despair.png">8턴 동안 상단의 선장효과 무효</div>
 <div class="icon-line"><img src="img/state_icon_invincible.png">1턴 동안 받는 데미지 무효</div>
 <br>
+
+<div id="__dl_btn__" style="
+  position: fixed; top: 14px; right: 14px; z-index: 9999;
+  display: flex; gap: 8px; align-items: center;">
+  <a href="PKA_BOSS.png" download="PKA_BOSS.png" style="
+     background:#ffd54f; color:#222; font-weight:700; text-decoration:none;
+     border-radius:10px; padding:10px 14px; box-shadow:0 2px 8px rgba(0,0,0,.25);
+     font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Pretendard,sans-serif;">
+     ⬇ PNG 다운로드
+  </a>
+</div>
 </body></html>
