--- a/PKA_MID_BOSS1.html
+++ b/PKA_MID_BOSS1.html
@@ -162,4 +162,15 @@
 <div class="icon-line"><img src="img/filter_attribute_intellect.png">키자루: 남은 HP가 100% 이하일 때</div>
 <div class="icon-line"><img src="img/filter_attribute_power.png">키자루: 남은 HP가 50% 이하일 때</div>
 <br>
+
+<div id="__dl_btn__" style="
+  position: fixed; top: 14px; right: 14px; z-index: 9999;
+  display: flex; gap: 8px; align-items: center;">
+  <a href="PKA_MID_BOSS1.png" download="PKA_MID_BOSS1.png" style="
+     background:#ffd54f; color:#222; font-weight:700; text-decoration:none;
+     border-radius:10px; padding:10px 14px; box-shadow:0 2px 8px rgba(0,0,0,.25);
+     font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Pretendard,sans-serif;">
+     ⬇ PNG 다운로드
+  </a>
+</div>
 </body></html>
