--- a/PKA_MID_BOSS2.html
+++ b/PKA_MID_BOSS2.html
@@ -119,4 +119,15 @@
 <div class="icon-line"><img src="img/common_icon_230_skill.png">1턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 일당의 공격력 상승)</div>
 <div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 3000을(를) 넘는 데미지를 90% 감소</div>
 <br>
+
+<div id="__dl_btn__" style="
+  position: fixed; top: 14px; right: 14px; z-index: 9999;
+  display: flex; gap: 8px; align-items: center;">
+  <a href="PKA_MID_BOSS2.png" download="PKA_MID_BOSS2.png" style="
+     background:#ffd54f; color:#222; font-weight:700; text-decoration:none;
+     border-radius:10px; padding:10px 14px; box-shadow:0 2px 8px rgba(0,0,0,.25);
+     font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Pretendard,sans-serif;">
+     ⬇ PNG 다운로드
+  </a>
+</div>
 </body></html>
