--- a/KIZUNA.html
+++ b/KIZUNA.html
@@ -29,8 +29,10 @@
 
 <h1>유대결전 패턴</h1>
 <ul>
-<li><a href='KIZUNA_BOSS1.html' style='font-size:28px !important'>[일반보스] [기] VS 검은 수염</a></li>
-<li><a href='KIZUNA_BOSS2.html' style='font-size:28px !important'>[일반보스] [심] VS 검은 수염</a></li>
+<li><a href='KIZUNA_BOSS1.html' style='font-size:28px !important'>[일반보스] [기] VS 루피&로</a></li>
+<li><a href='KIZUNA_BOSS2.html' style='font-size:28px !important'>[일반보스] [심] VS 루피&로</a></li>
+<li><a href='KIZUNA_SUPERBOSS1.html' style='font-size:28px !important'>[초보스] [힘] VS 루피&로</a></li>
+<li><a href='KIZUNA_SUPERBOSS2.html' style='font-size:28px !important'>[초보스] [지] VS 루피&로</a></li>
 </ul>
-<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-07</footer>
+<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-13</footer>
 </body></html>
