--- a/KIZUNA_BOSS2.html
+++ b/KIZUNA_BOSS2.html
@@ -17,103 +17,145 @@
 </style>
 </head>
 <body>
-       <h1>VS 검은 수염</h1>
+       <h1>VS 루피&로</h1>
        <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#e79925; font-weight:bold;">일반보스</span> <span style="color:#e79925; font-weight:bold;">[심]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_charge.png">사격형, 야심형, 강인형 캐릭터의 필살기 턴을 15턴 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">사격형, 야심형, 강인형 캐릭터의 슈퍼 체인지 효과를 15 단축</div>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">사격형, 야심형, 강인형 캐릭터의 VS 효과의 게이지를 15 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">힘 속성, 속 속성, 지 속성 캐릭터의 필살기 턴을 15턴 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">힘 속성, 속 속성, 지 속성 속성의 슈퍼 체인지 효과를 15 단축</div>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">힘 속성, 속 속성, 지 속성 속성의 VS 효과의 게이지를 15 단축</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 2:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 반 오거</span><br>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_235_skill.png">5턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 10000을(를) 받는다</div>
-<div class="icon-line"><img src="img/common_damage.png">남은 체력의 50% 비율 데미지</div>
+<div class="icon-line"><img src="img/common_despair.png">6턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">6턴 동안 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_chain_upper_limit.png">5턴 동안 체인 계수의 상한 수치를 1.1배로 고정시킨다</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">2턴 동안 받는 데미지를 90% 감소</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv1~Lv20의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 검은 수염</span><br>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지, 열상 이외의 상태이상 무효</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 루피&로</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">9턴 동안 선원 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">7턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
-<div class="icon-line"><img src="img/popuptext_slot_meat.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [고기] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_icon_burn.png">3턴 동안 15000 데미지의 화상</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">5턴 동안 필살기 사용 횟수 4회 제한</div>
+<div class="icon-line"><img src="img/common_icon_slot.png">98턴 동안 슬롯의 영향을 1.1배</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">5턴 동안 체인 계수가 2.0 이하일 경우 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/common_icon_230_skill.png">5턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 기본 공격력 상승)</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 [지] 슬롯으로 공격했을 때 데미지 90% 감소</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">3턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 슬롯 영향 증폭, 속성 상성 강화)</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">10턴 동안 남은 체력 1로 버티기 효과</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 지연, 모든 독, 방어력 감소</span><br>
+<div class="icon-line"><img src="img/common_damage.png">60000 데미지</div>
+<div class="icon-line"><img src="img/common_icon_burn.png">7턴 동안 15000 데미지의 화상</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 데미지 감소, , 데미지 무효, 속성 공격 무효,</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
-<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">3턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_meat.png">3턴 동안 슬롯 배리어([고기] 슬롯 2회)</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_heal.png">고정 회복 3000000</div>
+<div class="icon-line"><img src="img/popuptext_slot_blank.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [공백] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_captain_change.png">5턴 동안 우측 중간단 캐릭터와 선장 교체</div>
+<span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
+<div class="icon-line"><img src="img/common_attack_up_01_icon.png">99턴 동안 공격력을 1.5배</div>
+<div class="icon-line"><img src="img/common_blow.png">1턴 동안 선원을(를) 랜덤 1명 날려버리기</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv21~Lv30의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 검은 수염</span><br>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지, 열상 이외의 상태이상 무효</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 루피&로</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_blow.png">2턴 동안 선원을(를) 랜덤 2명 날려버리기</div>
-<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">7턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
-<div class="icon-line"><img src="img/popuptext_slot_meat.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [고기] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_icon_burn.png">3턴 동안 15000 데미지의 화상</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">5턴 동안 필살기 사용 횟수 4회 제한</div>
+<div class="icon-line"><img src="img/common_icon_slot.png">98턴 동안 슬롯의 영향을 1.1배</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">5턴 동안 체인 계수가 2.0 이하일 경우 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/common_icon_230_skill.png">5턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 기본 공격력 상승)</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 [지] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">3턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 슬롯 영향 증폭, 속성 상성 강화)</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">10턴 동안 남은 체력 1로 버티기 효과</div>
-<div class="icon-line"><img src="img/common_bind.png">9턴 동안 선원 봉쇄</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 지연, 모든 독, 방어력 감소</span><br>
+<div class="icon-line"><img src="img/common_damage.png">60000 데미지</div>
+<div class="icon-line"><img src="img/common_icon_burn.png">11턴 동안 15000 데미지의 화상</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 데미지 감소, , 데미지 무효, 속성 공격 무효,</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
-<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">3턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_meat.png">3턴 동안 슬롯 배리어([고기] 슬롯 2회)</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_heal.png">고정 회복 3000000</div>
+<div class="icon-line"><img src="img/popuptext_slot_blank.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [공백] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_captain_change.png">5턴 동안 우측 중간단 캐릭터와 선장 교체</div>
+<span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
+<div class="icon-line"><img src="img/common_attack_up_01_icon.png">99턴 동안 공격력을 1.5배</div>
+<div class="icon-line"><img src="img/common_blow.png">1턴 동안 선원을(를) 랜덤 1명 날려버리기</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv31~의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 검은 수염</span><br>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지, 열상 이외의 상태이상 무효</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 루피&로</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_blow.png">2턴 동안 선원을(를) 랜덤 2명 날려버리기</div>
-<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">7턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
-<div class="icon-line"><img src="img/popuptext_slot_meat.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [고기] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_icon_burn.png">3턴 동안 15000 데미지의 화상</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">5턴 동안 필살기 사용 횟수 4회 제한</div>
+<div class="icon-line"><img src="img/common_icon_slot.png">98턴 동안 슬롯의 영향을 1.1배</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">5턴 동안 체인 계수가 2.0 이하일 경우 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/common_icon_230_skill.png">5턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 기본 공격력 상승)</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 [지] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">3턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 슬롯 영향 증폭, 속성 상성 강화)</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">10턴 동안 남은 체력 1로 버티기 효과</div>
-<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">2턴 동안 받는 데미지를 90% 감소</div>
-<div class="icon-line"><img src="img/common_bind.png">11턴 동안 선원 봉쇄</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 지연, 모든 독, 방어력 감소</span><br>
+<div class="icon-line"><img src="img/common_damage.png">60000 데미지</div>
+<div class="icon-line"><img src="img/common_icon_burn.png">11턴 동안 15000 데미지의 화상</div>
+<div class="icon-line"><img src="img/common_damage.png">100000 데미지</div>
+<div class="icon-line"><img src="img/common_icon_heal_to_damage.png">7턴 동안[고기][셈라] 슬롯 이외의 회복 효과를 데미지로 변환</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 데미지 감소, , 데미지 무효, 속성 공격 무효,</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
-<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">3턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_meat.png">3턴 동안 슬롯 배리어([고기] 슬롯 2회)</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_heal.png">고정 회복 3000000</div>
+<div class="icon-line"><img src="img/popuptext_slot_blank.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [공백] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_captain_change.png">5턴 동안 우측 중간단 캐릭터와 선장 교체</div>
+<span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
+<div class="icon-line"><img src="img/common_attack_up_01_icon.png">99턴 동안 공격력을 1.5배</div>
+<div class="icon-line"><img src="img/common_blow.png">1턴 동안 선원을(를) 랜덤 1명 날려버리기</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <br>
 
