--- a/KIZUNA_SUPERBOSS1.html
+++ b/KIZUNA_SUPERBOSS1.html
@@ -17,66 +17,80 @@
 </style>
 </head>
 <body>
-       <h1>VS 나미&우솝</h1>
+       <h1>VS 루피&로</h1>
        <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#ee0000; font-weight:bold;">초보스</span> <span style="color:#ee0000; font-weight:bold;">[힘]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_charge.png">자유형, 야심형, 강인형 캐릭터의 필살기 턴을 15턴 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">자유형, 야심형, 강인형 캐릭터의 슈퍼 체인지 효과를 2 단축</div>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">자유형, 야심형, 강인형 캐릭터의 VS 효과의 게이지를 15 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">야심형, 박식형, 강인형 캐릭터의 필살기 턴을 15턴 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">야심형, 박식형, 강인형 캐릭터의 슈퍼 체인지 효과를 15 단축</div>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">야심형, 박식형, 강인형 캐릭터의 VS 효과의 게이지를 15 단축</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 2:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">7턴 동안 받는 데미지를 90% 감소</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_bind.png">5턴 동안 중간단 봉쇄</div>
-<div class="icon-line"><img src="img/common_stun.png">하단은(는) 받는 데미지 4배의 기절</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">3턴 동안 방어력 10000000배</div>
+<div class="icon-line"><img src="img/common_special_bind.png">3턴 동안 상단, 중간단 필살기 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_heal_to_damage.png">7턴 동안[고기][셈라] 슬롯 이외의 회복 효과를 데미지로 변환</div>
+<div class="icon-line"><img src="img/common_damage.png">남은 체력의 25% 비율 데미지</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">5턴 동안 15000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과 해제</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">10턴 동안 [힘][기][속][심][지][무지개][고기][연] 슬롯으로 공격했을 때 데미지 90% 감소</div>
 <span class="label-death">격파 시 행동:</span><br>
 <div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
-<div class="icon-line"><img src="img/common_damage.png">50000 데미지</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
 <div class="icon-line"><img src="img/common_icon_252_skill.png">9턴 동안 잠재 능력 무효</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
-<div class="icon-line"><img src="img/common_damage.png">30000 데미지</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 3:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 나미&우솝</span><br>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 방어력 감소, 약체 이외의 상태이상 무효</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 루피&로</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_palsy.png">6턴 동안 마비</div>
+<div class="icon-line"><img src="img/common_bind.png">10턴 동안 중간단 봉쇄</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">1턴 동안 받는 데미지 무효</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_2.png">2턴 동안 탭 타이밍 배리어(GREAT 2회)</div>
+<div class="icon-line"><img src="img/common_icon_230_skill.png">2턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 기본 공격력 상승, 데미지 감소 비율에 따른 공격력 상승)</div>
 <div class="icon-line"><img src="img/common_territory.png">3턴 동안 장소를 ‘구역: 적’(으)로 만든다</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">5턴 동안 [속] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_blue.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [속] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_chain_upper_limit.png">5턴 동안 체인 계수의 상한 수치를 1.1배로 고정시킨다</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">5턴 동안 체인 계수가 2.0 이하일 경우 공격력 90% 감소</div>
 <div class="icon-line"><img src="img/characterbox_icon_ex.png">자신의힘 속성 속성을 속성 초월</div>
-<div class="icon-line"><img src="img/common_bind.png">7턴 동안 하단 봉쇄</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">중간단의 필살기 턴을 3턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_icon_skill_limit.png">5턴 동안 필살기 사용 횟수 4회 제한</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 슬롯 변환</span><br>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 방어력 감소, 강제 방어력 감소</span><br>
-<div class="icon-line">2회까지</div>
-<div class="icon-line"><img src="img/common_del.png">유리 효과 해제</div>
-<div class="icon-line"><img src="img/popuptext_slot_negative.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [불리] 슬롯으로 변환</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 지연</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_speed.png">1턴 동안 슬롯 배리어([속] 슬롯 4회)</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">10턴 동안 방어력 10000000배</div>
+<div class="icon-line"><img src="img/common_berserk_icon.png">99턴 동안 공격력 상승, 행동 턴 감소</div>
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">6턴 동안 공격력 90% 감소</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">4턴 동안 받는 데미지를 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">4턴 동안 방어력 1000000배</div>
 <br>
+
+<div id="__dl_btn__" style="
+  position: fixed; top: 14px; right: 14px; z-index: 9999;
+  display: flex; gap: 8px; align-items: center;">
+  <a href="KIZUNA_SUPERBOSS1.png" download="KIZUNA_SUPERBOSS1.png" style="
+     background:#ffd54f; color:#222; font-weight:700; text-decoration:none;
+     border-radius:10px; padding:10px 14px; box-shadow:0 2px 8px rgba(0,0,0,.25);
+     font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Pretendard,sans-serif;">
+     ⬇ PNG 다운로드
+  </a>
+</div>
 </body></html>
