--- a/KIZUNA_SUPERBOSS2.html
+++ b/KIZUNA_SUPERBOSS2.html
@@ -17,28 +17,31 @@
 </style>
 </head>
 <body>
-       <h1>VS 나미&우솝</h1>
-       <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#e79925; font-weight:bold;">초보스</span> <span style="color:#e79925; font-weight:bold;">[심]</span></div>
+       <h1>VS 루피&로</h1>
+       <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#7515A1; font-weight:bold;">초보스</span> <span style="color:#7515A1; font-weight:bold;">[지]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_charge.png">힘 속성, 심 속성, 지 속성 캐릭터의 필살기 턴을 15턴 단축</div>
-<div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
-<div class="icon-line"><img src="img/common_change_charge.png">힘 속성, 심 속성, 지 속성 속성의 슈퍼 체인지 효과를 2 단축</div>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">힘 속성, 심 속성, 지 속성 속성의 VS 효과의 게이지를 15 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">격투형, 야심형, 강인형 캐릭터의 필살기 턴을 15턴 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">격투형, 야심형, 강인형 캐릭터의 슈퍼 체인지 효과를 15 단축</div>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">격투형, 야심형, 강인형 캐릭터의 VS 효과의 게이지를 15 단축</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 2:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_bind.png">7턴 동안 상단 봉쇄</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_247_skill.png">1턴 동안 [힘][기][속][심][지] 슬롯으로 공격했을 때 데미지 80% 감소</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">2턴 동안 5000을(를) 넘는 데미지를 97% 감소</div>
-<div class="icon-line"><img src="img/common_despair.png">5턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/common_palsy.png">6턴 동안 마비</div>
+<div class="icon-line"><img src="img/popuptext_slot_meat.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [고기] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
+<div class="icon-line"><img src="img/common_damage.png">남은 체력의 50% 비율 데미지</div>
+<div class="icon-line"><img src="img/common_icon_cureslot_to_damage.png">7턴 동안[고기][셈라] 슬롯에 의한 회복을 축적하여 턴 종료 시 데미지로 변환</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 봉쇄 회복</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">3턴 동안 방어력 10000000배</div>
 <span class="label-death">격파 시 행동:</span><br>
 <div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
@@ -48,39 +51,45 @@
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 3:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 나미&우솝</span><br>
-<div class="icon-line"><img src="img/common_icon_210.png">피해 데미지 증가 이외의 상태이상 무효</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 루피&로</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_02.png">약점 타입: 참격형</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">3턴 동안 15000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_del.png">유리 효과 해제</div>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_despair.png">9턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/common_special_bind.png">7턴 동안 선원 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 50% 감소</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">체인지 효과 발동까지의 체인지 카운트를 2 되돌리기</div>
-<div class="icon-line"><img src="img/common_bind.png">5턴 동안 선원 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_chain_down.png">5턴 동안 체인 계수 증가량 0.1배</div>
-<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">5턴 동안 체인 계수가 2.5 이하일 경우 공격력 60% 감소</div>
-<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 [和][연] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/characterbox_icon_ex.png">자신의심 속성, 지 속성 속성을 속성 초월</div>
+<div class="icon-line"><img src="img/common_icon_chain_down.png">7턴 동안 체인 계수 증가량 0.1배</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">1턴 동안 필살기 사용 횟수 2회 제한</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">7턴 동안 받는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">7턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
 <div class="icon-line"><img src="img/common_territory.png">3턴 동안 장소를 ‘구역: 적’(으)로 만든다</div>
-<div class="icon-line"><img src="img/characterbox_icon_ex.png">자신의심 속성 속성을 속성 초월</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정, 체인 계수 상승(가산)</span><br>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 속성 상성 강화</span><br>
 <div class="icon-line">1회까지</div>
-<div class="icon-line"><img src="img/common_icon_209_skill.png">10턴 동안 체인 계수가 5.0 이상일 경우 공격력 80% 감소</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 속성 상성 강화&기본 공격력 상승</span><br>
+<div class="icon-line"><img src="img/common_color_change.png">심 속성 변화(2개 이상일 경우 랜덤 변화)</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 데미지 감소 비율에 따른 공격력 상승</span><br>
 <div class="icon-line">1회까지</div>
-<div class="icon-line">속성 상성 강화, 기본 공격력 상승 해제</div>
-<div class="icon-line"><img src="img/common_damage.png">3턴 동안1.1배의 피해 데미지량</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과 해제</div>
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_palsy.png">6턴 동안 마비</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <br>
+
+<div id="__dl_btn__" style="
+  position: fixed; top: 14px; right: 14px; z-index: 9999;
+  display: flex; gap: 8px; align-items: center;">
+  <a href="KIZUNA_SUPERBOSS2.png" download="KIZUNA_SUPERBOSS2.png" style="
+     background:#ffd54f; color:#222; font-weight:700; text-decoration:none;
+     border-radius:10px; padding:10px 14px; box-shadow:0 2px 8px rgba(0,0,0,.25);
+     font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Pretendard,sans-serif;">
+     ⬇ PNG 다운로드
+  </a>
+</div>
 </body></html>
