--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <a href="TM.html">
         <img src="img/common_TM_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-11-12 18:00 ~ <br>2025-11-16 22:59<br>⚪ 예정</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-11-12 18:00 ~ <br>2025-11-16 22:59<br>🟢 개최 중</div>
     </div>
     <div>
       <a href="PKA.html">
@@ -20,9 +20,9 @@
       <a href="KIZUNA.html">
         <img src="img/common_KIZUNA_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-10-22 12:00 ~ <br>2025-10-26 22:59<br>🔴 종료</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-11-19 12:00 ~ <br>2025-11-23 22:59<br>⚪ 예정</div>
     </div>
   </div>
-  <footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-07</footer>
+  <footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-13</footer>
 </body>
 </html>
