--- a/PKA.html
+++ b/PKA.html
@@ -31,8 +31,8 @@
 
 <iframe src="PKA_BOSS.html" width="100%" height="90%" style="border:none;"></iframe>
 <ul>
-  <li><a href='PKA_MID_BOSS2.html' style='font-size:24px'>VS 도리&브로기</a></li><li><a href='PKA_MID_BOSS1.html' style='font-size:24px'>VS 키자루</a></li>
+  <li><a href='PKA_MID_BOSS2.html' style='font-size:24px'>VS 푸딩</a></li><li><a href='PKA_MID_BOSS1.html' style='font-size:24px'>VS 도리&브로기</a></li>
 </ul>
-<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-13</footer>
+<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-21</footer>
 </body>
 </html>
