--- a/PKA_BOSS.html
+++ b/PKA_BOSS.html
@@ -17,124 +17,101 @@
 </style>
 </head>
 <body>
-<h1>VS 푸딩</h1>
+<h1>VS 키드</h1>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 100+</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_palsy.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해][마비] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">6턴 동안 남은 체력 1로 버티기 효과</div>
+<div class="icon-line"><img src="img/common_icon_burn.png">6턴 동안 30000 데미지의 화상</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">4턴 동안 필살기 사용 횟수 1회 제한</div>
 <br>
 <h3>Stage 4:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 반 오거</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 킬러</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">99턴 동안 상태이상 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_palsy.png">7턴 동안 마비</div>
-<div class="icon-line"><img src="img/common_stun.png">중간단은(는) 받는 데미지 3배의 기절</div>
-<div class="icon-line"><img src="img/common_icon_chain_upper_limit.png">6턴 동안 체인 계수의 초기 수치를 1.1배, 체인 계수의 상한 수치를 1.1배로 고정시킨다</div>
-<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">3턴 동안 체인 계수가 3 이하일 경우 공격력 90% 감소</div>
-<span class="label-death">격파 시 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_captain_change.png">4턴 동안 선원 캐릭터와 선장 교체</div>
+<div class="icon-line"><img src="img/common_bind.png">9턴 동안 중간단 봉쇄</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_wa.png">2턴 동안 슬롯 배리어([和] 슬롯 2회)</div>
+<div class="icon-line"><img src="img/common_icon_235_skill.png">2턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 30000을(를) 받는다</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 10000배</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">7턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 푸딩</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 유스타스 키드</span><br>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
-<span class="label-preemptive" style="color:#87cefa">선제 행동: 일당의 체력이 60% 이상일 때</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 3턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">3턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 2턴 감소(대상의 상태 이상: 슬롯 영향 증폭)</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_2.png">2턴 동안 탭 타이밍 배리어(GREAT 4회)</div>
-<div class="icon-line"><img src="img/common_despair.png">10턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">1턴 동안 받는 데미지 무효</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">10턴 동안 방어력 10000배</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">10턴 동안 남은 체력 1로 버티기 효과</div>
+<div class="icon-line"><img src="img/common_weak_02.png">약점 타입: 참격형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 3턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">3턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 2턴 감소(대상의 상태 이상: 슬롯 영향 증폭)</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_2.png">2턴 동안 탭 타이밍 배리어(GREAT 4회)</div>
+<div class="icon-line"><img src="img/common_bind.png">10턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 2턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_slot_bind.png">3턴 동안 슬롯 봉쇄</div>
 <div class="icon-line"><img src="img/common_despair.png">10턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">1턴 동안 받는 데미지 무효</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 슬롯 변환</span><br>
-<div class="icon-line">1회까지</div>
-<div class="icon-line"><img src="img/common_del.png">유리 효과, 축적치 해제</div>
-<div class="icon-line"><img src="img/popuptext_slot_superobstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [초 방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_guts_icon.png">6턴 동안 남은 체력 1로 버티기 효과</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 1-59</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_guts_icon.png">1턴 동안 남은 체력 1로 버티기 효과</div>
+<div class="icon-line"><img src="img/common_icon_burn.png">2턴 동안 2500 데미지의 화상</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_palsy.png">2턴 동안 마비</div>
+<div class="icon-line"><img src="img/common_bind.png">2턴 동안 중간단 봉쇄</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">2턴 동안 10000을(를) 넘는 데미지를 99% 감소</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 푸딩</span><br>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 유스타스 키드</span><br>
+<div class="icon-line"><img src="img/common_weak_02.png">약점 타입: 참격형</div>
 <span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_bind.png">2턴 동안 하단 봉쇄</div>
 <div class="icon-line"><img src="img/common_despair.png">2턴 동안 상단의 선장효과 무효</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 60-79</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_guts_icon.png">2턴 동안 남은 체력 1로 버티기 효과</div>
+<div class="icon-line"><img src="img/common_icon_burn.png">3턴 동안 5000 데미지의 화상</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_palsy.png">3턴 동안 마비</div>
+<div class="icon-line"><img src="img/common_bind.png">3턴 동안 중간단 봉쇄</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">2턴 동안 7500을(를) 넘는 데미지를 99% 감소</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 푸딩</span><br>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 유스타스 키드</span><br>
+<div class="icon-line"><img src="img/common_weak_02.png">약점 타입: 참격형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_2.png">1턴 동안 탭 타이밍 배리어(GREAT 2회)</div>
-<div class="icon-line"><img src="img/common_despair.png">5턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line"><img src="img/common_bind.png">4턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_despair.png">4턴 동안 상단의 선장효과 무효</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 80-99</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_palsy.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해][마비] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">5턴 동안 남은 체력 1로 버티기 효과</div>
+<div class="icon-line"><img src="img/common_icon_burn.png">5턴 동안 15000 데미지의 화상</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">4턴 동안 필살기 사용 횟수 2회 제한</div>
 <br>
 <h3>Stage 4:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 반 오거</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 킬러</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">99턴 동안 상태이상 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_palsy.png">6턴 동안 마비</div>
-<div class="icon-line"><img src="img/common_stun.png">중간단은(는) 받는 데미지 1.5배의 기절</div>
-<div class="icon-line"><img src="img/common_icon_chain_upper_limit.png">5턴 동안 체인 계수의 초기 수치를 1.1배, 체인 계수의 상한 수치를 1.1배로 고정시킨다</div>
-<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">2턴 동안 체인 계수가 2.75 이하일 경우 공격력 90% 감소</div>
-<span class="label-death">격파 시 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_captain_change.png">2턴 동안 선원 캐릭터와 선장 교체</div>
+<div class="icon-line"><img src="img/common_bind.png">8턴 동안 중간단 봉쇄</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_wa.png">2턴 동안 슬롯 배리어([和] 슬롯 1회)</div>
+<div class="icon-line"><img src="img/common_icon_235_skill.png">2턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 15000을(를) 받는다</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
 <br>
 <h3>Stage 5:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 푸딩</span><br>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 유스타스 키드</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">99턴 동안 상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">99턴 동안격파(전투 불능)계의 필살기 무효</div>
-<div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">99턴 동안비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
-<span class="label-preemptive" style="color:#87cefa">선제 행동: 일당의 체력이 70% 이상일 때</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 2턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">3턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 슬롯 영향 증폭)</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_2.png">1턴 동안 탭 타이밍 배리어(GREAT 4회)</div>
-<div class="icon-line"><img src="img/common_despair.png">8턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">1턴 동안 받는 데미지 무효</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 7000배</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">6턴 동안 남은 체력 1로 버티기 효과</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_weak_02.png">약점 타입: 참격형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 2턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">3턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 슬롯 영향 증폭)</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_2.png">1턴 동안 탭 타이밍 배리어(GREAT 4회)</div>
-<div class="icon-line"><img src="img/common_despair.png">8턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">1턴 동안 받는 데미지 무효</div>
+<div class="icon-line"><img src="img/common_bind.png">9턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
+<div class="icon-line"><img src="img/common_slot_bind.png">2턴 동안 슬롯 봉쇄</div>
+<div class="icon-line"><img src="img/common_despair.png">9턴 동안 상단의 선장효과 무효</div>
 <br>
 
 <div id="__dl_btn__" style="
