--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
       <a href="TM.html">
         <img src="img/common_TM_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-11-12 18:00 ~ <br>2025-11-16 22:59<br>🟢 개최 중</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-11-12 18:00 ~ <br>2025-11-16 22:59<br>🔴 종료</div>
     </div>
     <div>
       <a href="PKA.html">
         <img src="img/common_PKA_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-10-27 12:00 ~ <br>2025-11-24 22:59<br>🟢 개최 중</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-11-25 12:00 ~ <br>2025-12-26 22:59<br>⚪ 예정</div>
     </div>
     <div>
       <a href="KIZUNA.html">
         <img src="img/common_KIZUNA_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-11-19 12:00 ~ <br>2025-11-23 22:59<br>⚪ 예정</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-11-19 12:00 ~ <br>2025-11-23 22:59<br>🟢 개최 중</div>
     </div>
   </div>
-  <footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-13</footer>
+  <footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-11-21</footer>
 </body>
 </html>
