--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <a href="TM.html">
         <img src="img/common_TM_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-11-12 18:00 ~ <br>2025-11-16 22:59<br>🔴 종료</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-12-10 18:00 ~ <br>2025-12-14 22:59<br>⚪ 예정</div>
     </div>
     <div>
       <a href="PKA.html">
